@@ -1,7 +1,7 @@
-# Copyright 1999-2019 Gentoo Authors
+# Copyright 1999-2020 Gentoo Authors
 # Distributed under the terms of the GNU General Public License v2
 
-EAPI=6
+EAPI=7
 
 inherit flag-o-matic toolchain-funcs prefix
 
@@ -16,6 +16,7 @@ IUSE=""
 
 DEPEND="
 	dev-libs/boost
+	dev-python/fslpy
 	media-gfx/graphviz
 	media-libs/gd
 	media-libs/glu
